--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "eslint": "^9.20.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
